@@ -256,8 +256,8 @@ const BichoCommand = createCommand({
       descriptionLocalizations: { 'en-US': 'Bet amount' },
       type: ApplicationCommandOptionTypes.Integer,
       required: false,
-      minValue: 1,
-      maxValue: 500000,
+      minValue: 10,
+      maxValue: 250_000,
     },
   ],
   category: 'economy',
