@@ -16,7 +16,9 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 - O comando `/top` apenas mostra o nome dos usuários nas primeiras 3 páginas.
 - O valor máximo para apostar na `/roleta` foi aumentado para **50000**.
 - A aposta mínima da roleta foi aumentada para **10** estrelinhas.
-- O imposto do `/roleta` foi alterado. Agora, apostas até **10** estrelinhas possuem apenas **3.8%** de impostos. O imposto vai aumentar de forma linear até **50000** estrelinhas de lucro, quando o imposto cobrado será de **29.7%**
+- O imposto do `/roleta` foi alterado. Agora, apostas até **10** estrelinhas possuem apenas **3.8%** de impostos. O imposto vai aumentar de forma linear até **50000** estrelinhas de lucro, quando o imposto cobrado será de **29.7%**.
+- O limite mínimo para apostar no `/bicho` foi aumentado para **10 estrelinhas**.
+- O limit máximo para apostar no `/bicho` foi reduzido para **250000** estrelinhas.
 
 ### Fixed
 
